[package]
name = "waflens"
version = "0.1.0"
edition = "2021"
description = "A terminal-based user interface for parsing and analyzing ModSecurity audit logs"
authors = ["Your Name"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/waflens"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
regex = "1.11"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
num-format = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
